--- a/app/views/dptos/edit.js.erb
+++ b/app/views/dptos/edit.js.erb
@@ -1,1 +1,1 @@
-$(".dpto_item_<%=@dpto.id %>").replaceWith("<%=j render 'edit' %>");
+$("#dpto_item_<%=@dpto.id %>").replaceWith("<%=j render 'edit' %>");
