--- a/app/views/subdptos/edit.js.erb
+++ b/app/views/subdptos/edit.js.erb
@@ -1,1 +1,1 @@
-$(".subdpto_item_<%=@subdpto.id %>").replaceWith("<%=j render 'edit' %>");
+$("#subdpto_item_<%=@subdpto.id %>").replaceWith("<%=j render 'edit' %>");
