--- a/app/views/dptos/_form.html.erb
+++ b/app/views/dptos/_form.html.erb
@@ -10,18 +10,19 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="new_dpto">
-    <div class="field">
-      <%= f.label :name %><br>
-      <%= f.text_field :name, :autofocus => true %>
-    </div>
-    <div class="field">
-      <%= f.label :abbr %><br>
-      <%= f.text_field :abbr %>
-    </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-  </div>
+  <table>
+    <thead>
+      <tr>
+        <th>Departamento</th>
+        <th>Sigla</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="fields">
+        <td><%= f.text_field :name, :autofocus => true %></td>
+        <td><%= f.text_field :abbr %></td>
+        <td><%= f.submit "Salvar" %></td>
+      </tr>
+    </tbody>
+  </table>
 <% end %>
