--- a/app/views/dptos/create.js.erb
+++ b/app/views/dptos/create.js.erb
@@ -1,2 +1,3 @@
-$('.dptos_list').append('<div class="dpto_item_<%= @dpto.id %>"><p><%=j @dpto.abbr %> - <%=j @dpto.name %></p><div class="actions"><%=j link_to "+ Subdpto", new_dpto_subdpto_path(@dpto)%><%=j link_to "Editar", edit_dpto_path(@dpto), :remote => true %> <%=j link_to "Remover", @dpto, method: :delete, data: { confirm: "Tem certeza?" }, :class => "remove_item" %></div></div>');
-$('#new_dpto #dpto_name, #new_dpto #dpto_abbr').html('');
+$('.dptos_list').append('<tr class="fields" id="dpto_item_<%= @dpto.id %>"><td><%= @dpto.name %></td><td><%= @dpto.abbr %></td><td class="actions"><%=j link_to image_tag("subdptos.png"), new_dpto_subdpto_path(@dpto), :title => "+ Subdpto"%><%=j link_to image_tag("edit.png"), edit_dpto_path(@dpto), :remote => true, :title => "Editar" %><%=j link_to image_tag("delete.png"), @dpto, method: :delete, data: { confirm: "Tem certeza?" }, :remote => true, :title => "Deletar" %></td></tr>');
+$('#new_dpto #dpto_name, #new_dpto #dpto_abbr').html("");
+$("#new_dpto #dpto_name").focus();
