--- a/app/views/dptos/index.html.erb
+++ b/app/views/dptos/index.html.erb
@@ -2,14 +2,21 @@
 
 <%= render 'form' %>
 <table class="dptos_list">
+	<thead>
+		<tr>
+			<th>Departamento</th>
+			<th>Sigla</th>
+		</tr>
+	</thead>
 	<tbody>
 		<% @dptos.each do |dpto| %>
 		  <tr class="fields" id="dpto_item_<%= dpto.id %>">
-		    <td><%= dpto.abbr %> - <%= dpto.name %></td>
+		    <td><%= dpto.name %></td>
+		    <td><%= dpto.abbr %></td>
 		    <td class="actions">
-		      <%= link_to '+ Subdpto', new_dpto_subdpto_path(dpto)%>
-		      <%= link_to 'Editar', edit_dpto_path(dpto), :remote => true %>
-		      <%= link_to 'Remover', dpto, method: :delete, data: { confirm: 'Tem certeza?' }, :remote => true %>
+		      <%= link_to image_tag('subdptos.png'), new_dpto_subdpto_path(dpto), :title => "+ Subdpto"%>
+		      <%= link_to image_tag('edit.png'), edit_dpto_path(dpto), :remote => true, :title => "Editar" %>
+		      <%= link_to image_tag('delete.png'), dpto, method: :delete, data: { confirm: 'Tem certeza?' }, :remote => true, :title => "Deletar" %>
 		    </td>
 		  </tr>
 		<% end %>
