--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -14,12 +14,16 @@
       <% @equipments.each do |equipment| %>
           <tr class="fields" id="equipment_item_<%= equipment.id %>">
             <td class="ip"><%= equipment.ip %></td>
-            <% @dptos.each do |d| %>
-              <td class="dpto"><%= d.abbr if equipment.dpto_id == d.id %></td>  
-            <% end %>
-            <% @subdptos.each do |s| %>
-              <td class="subdpto"><%= s.abbr if equipment.subdpto_id == s.id %></td>  
-            <% end %>
+            <td class="dpto">
+              <% @dptos.each do |d| %>
+                <% d.abbr if equipment.dpto_id == d.id %>
+              <% end %>
+              </td>  
+              <td class="subdpto">
+              <% @subdptos.each do |s| %>
+                <%= s.abbr if equipment.subdpto_id == s.id %>
+              <% end %>
+            </td>
             <td class="sort"><%= equipment.sort %></td>
             <td class="actions"><%= link_to image_tag('edit.png'), edit_equipment_path(equipment), :remote => true, :title => "Editar" %>
             <%= link_to image_tag('delete.png'), equipment, method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :title => "Deletar"%>
