--- a/app/views/subdptos/destroy.js.erb
+++ b/app/views/subdptos/destroy.js.erb
@@ -1,3 +1,3 @@
-$(".subdpto_item_<%=@subdpto.id %>").fadeOut(function(){
+$("#subdpto_item_<%=@subdpto.id %>").fadeOut(function(){
   $(this).remove();
 });
