--- a/app/views/subdptos/new.html.erb
+++ b/app/views/subdptos/new.html.erb
@@ -1,17 +1,23 @@
-<h1>New subdpto</h1>
+<h1>Subdepartamentos</h1>
 
 <%= render 'form' %>
-
-<div class="subdptos_list">
-	  <% @subdptos.each do |subdpto| %>
-		  <% if !subdpto.name.blank? %>
-		    <div class="subdpto_item_<%= subdpto.id %>">
-		      <p><%= subdpto.name %></p>
-		      <div class="actions">
-		        <%= link_to 'Editar', edit_dpto_subdpto_path(@dpto, subdpto), :remote => true %>
-		        <%= link_to 'Remover', [@dpto, subdpto], method: :delete, data: { confirm: 'Tem certeza?' }, :remote => true %>
-		      </div>
-		    </div>
-		  <% end %>
-  	<% end %>
-</div>
+<table class="subdptos_list">
+	<thead>
+		<tr>
+			<th>Subdepartamento</th>
+			<th>Sigla</th>
+		</tr>
+	</thead>
+	<tbody>
+		<% @subdptos.each do |subdpto| %>
+		  <tr class="fields" id="subdpto_item_<%= subdpto.id %>">
+		    <td><%= subdpto.name %></td>
+		    <td><%= subdpto.abbr %></td>
+		    <td class="actions">
+		      <%= link_to image_tag('edit.png'), edit_dpto_subdpto_path(@dpto, subdpto), :remote => true, :title => "Editar" %>
+		      <%= link_to image_tag('delete.png'), [@dpto, subdpto], method: :delete, data: { confirm: 'Tem certeza?' }, :remote => true, :title => "Deletar" %>
+		    </td>
+		  </tr>
+		<% end %>
+	</tbody>
+</table>
