--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <ul class="home_links">
-	<li class="dptos"><a href="/dptos">Departamentos</a></li>
-	<li class="equipments"><a href="/equipment">Equipamentos <%= "(#{@equipments})" if !@equipments.blank? %></a></li>
-	<li class="computers"><a href="/computers">Computadores <%= "(#{@computers})" if !@computers.blank? %></a></li>
+	<li class="dptos"><a href="dptos">Departamentos</a></li>
+	<li class="equipments"><a href="equipment">Equipamentos <%= "(#{@equipments})" if !@equipments.blank? %></a></li>
+	<li class="computers"><a href="computers">Computadores <%= "(#{@computers})" if !@computers.blank? %></a></li>
 	<!-- <li class="reports"><a href="/reports">Relatórios</a></li> -->
 </ul>
