--- a/app/views/computers/_edit.html.erb
+++ b/app/views/computers/_edit.html.erb
@@ -27,7 +27,7 @@
 			// make a POST call and replace the content
 			var dpto = $('.computer_dpto_id_<%= @computer.id %> :selected').val();
 			if(dpto == "") dpto="0";
-			jQuery.get('/computers/get_subdptos/' + dpto, function(data){
+			jQuery.get('<%= root_path %>/computers/get_subdptos/' + dpto, function(data){
 					$(".computer_subdpto_id_<%= @computer.id %>").replaceWith(data);
 			})
 			return false;
