--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@ $t_gray: #f1f1f1;
   src: url('OpenSans-Regular.ttf'), url('OpenSans-Bold.ttf'), url('OpenSans-BoldItalic.ttf'), url('OpenSans-Italic.ttf'), url('OpenSans-Light.ttf'), url('OpenSans-LightItalic.ttf'), url('OpenSans-SemiBold.ttf'), url('OpenSans-SemiBoldItalic.ttf');
 }
 
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
 // Main content
 
 body, html{
@@ -97,7 +101,7 @@ footer{
 		float: left;
 
 		th{
-			width: 150px;
+			width: 160px;
 			text-align: center;
 			float: left;
 			background:  $p_blue;
@@ -114,7 +118,7 @@ footer{
 			border-radius: 0 3px 0 0;
 		}
 		.ip{
-			width: 42px !important;
+			width: 40px !important;
 		}
 	}
 
@@ -125,13 +129,13 @@ footer{
 
 		td{
 			padding: 5px;
-			width: 150px;
+			width: 160px;
 			float: left;
 			background: #fff;
 			// margin: 0 2px 0 0;
 			// border:  1px solid #fff;
 			text-align: center;
-			height: 20px;
+			height: 30px;
 		}
 
 		.ip{
@@ -155,7 +159,7 @@ footer{
 	.fields .actions, .fields:nth-child(2n+1) .actions{
 		float: right;
 		position: inherit;
-		margin: -30px -50px 0 0;
+		margin: -1px -45px 0 0;
 		padding: 3px 0;
 		width: 60px;
 		border-radius: 5px;
@@ -172,9 +176,9 @@ footer{
 
 	.fields:nth-child(2n+1) td{
 		padding: 5px;
-		width: 150px;
+		width: 160px;
 		float: left;
-		background: $t_blue;
+		background: $s_blue2;
 		// border: 1px solid #d8e7ed;
 	}
 	.fields:nth-child(2n+1) td:first-child{
@@ -232,16 +236,16 @@ footer{
 			float: left;
 			width: 162px;
 			text-align: center;
-			margin: 0 0 -6px -1px;
+			margin: 0 0 -6px -2px;
 		}
 		.ip{
-			width: 48px !important;
+			width: 40px !important;
 		}
 	}
 
 	.fields div, .fields td{
 		float: left;
-		width: 150px;
+		width: 160px;
 		padding: 5px;
 		// margin-right: 4px;
 
@@ -311,11 +315,11 @@ footer{
 	text-align: center;
 	li{
 		display: inline-block;
-		width: 130px;
-		margin: 0 35px 10px 0;
+		width: 160px;
+		margin: 0 5px 10px 0;
 	}
 	a{
-		clear: both;
+		float: left;
 		display: inline-block;
 		text-decoration: none;
 		color: #fff;
@@ -328,6 +332,12 @@ footer{
 	}
 	a:hover{
 		background: $s_blue2;
+		margin-top: -2px;
+		border-bottom: 6px solid $p_blue;
+	}
+	a:active{
+		margin-top: 2px;
+		border-bottom: 2px solid $p_blue;
 	}
 
 }
