--- a/app/views/equipment/_edit.html.erb
+++ b/app/views/equipment/_edit.html.erb
@@ -13,9 +13,8 @@
 			<%= f.text_field :sort %>
 		</div>
 		<div class="actions">
-			<%= f.submit  "Atualizar" %>
-			<%= @old_equip.dpto_id %>
-			<input type="button" class="cancel_btn" value="Cancelar"/>
+			<%= link_to image_tag('save.png'), "#submit_form", :title => "Salvar", :class=> "submit_form", :remote => true%>
+			<%= link_to image_tag('delete.png'), "#cancel_btn", :title => "Cancelar", :class=> "cancel_btn", :remote => true %>
 		</div>
 	</div>
 	<script type="text/javascript">
@@ -27,7 +26,7 @@
 			if(dpto == "") dpto="0";
 			jQuery.get('<%= root_path %>/equipment/get_subdptos/' + dpto, function(data){
 					$(".equipment_subdpto_id_<%= @equipment.id %>").replaceWith(data);
-			})
+			});
 			return false;
 		});
 		// Save on enter pressed
