--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -91,6 +91,20 @@ footer{
 	}
 }
 
+.notice{
+	width: 40%;
+	position: fixed;
+	top: 0;
+	left: 30%;
+	background: $s_blue2;
+	border-bottom: 3px solid $p_blue;
+	border-radius: 0 0 3px 3px;
+	color: #fff;
+	height: 40px;
+	padding: 10px 0;
+	text-align: center;
+}
+
 //  Tables
 .computers_list, .equipments_list, .dptos_list, .subdptos_list{
 	float: left;
@@ -271,6 +285,63 @@ footer{
 #new_computer, #new_equipment{
 	.fields{
 		background: none;
+	}
+}
+
+// Login page
+
+.login_container{
+	width: 50%;
+	margin: 0 auto;
+
+	h1{
+		text-align: center;
+		color: $s_blue;
+		padding: 0;
+		margin: -30px 0 60px 0;
+	}
+
+	label{
+		float: left;
+		min-width: 80px;
+		margin-top: 5px;
+	}
+
+	.field{
+		width: 100%;
+		margin: 0 0 20px 0;
+		font-size: 18px;
+		color: #666;
+	}
+
+	.field input{
+		width: 82%;
+		font-size: 18px;
+		color: #666;
+		padding: 5px 0;
+		border: 1px solid #ccc;
+	}
+
+	.actions{
+		float: right;
+	}
+
+	.actions input{
+		float: left;
+		text-decoration: none;
+		color: #fff;
+		width: 150px;
+		background: $s_blue;
+		border: none;
+		font-size: 16px;
+		border-bottom: 4px solid $p_blue;
+		padding: 10px 15px;
+		text-align: center;
+		border-radius: 1px;
+	}
+
+	.box{
+		margin: 80px auto;
 	}
 }
 
