--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,25 +1,29 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% @user.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :nickname %><br>
-    <%= f.text_field :nickname %>
+<%= form_for @user do |f| %>  
+  <% if @user.errors.any? %>  
+    <div class="error_messages">  
+      <h2>Form is invalid</h2>  
+      <ul>  
+        <% for message in @user.errors.full_messages %>  
+          <li><%= message %></li>  
+        <% end %>  
+      </ul>  
+    </div>  
+  <% end %>  
+  <div class="field">  
+    <%= f.label :name %>  
+    <%= f.text_field :name %>  
   </div>
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+  <div class="field">  
+    <%= f.label :username %>  
+    <%= f.text_field :username %>  
+  </div>  
+  <div class="field">  
+    <%= f.label :password %>  
+    <%= f.password_field :password %>  
+  </div>  
+  <div class="field">  
+    <%= f.label :password_confirmation %>  
+    <%= f.password_field :password_confirmation %>  
+  </div>  
+  <div class="actions"><%= f.submit %></div>  
+<% end %>  
