Going back to one user login system

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,6 +45,9 @@ header {
       font-size: 40px;
       padding: 0;
       line-height: 50px; }
+  header .logout {
+    float: right;
+    margin: 15px 0 0 0; }
 
 .main_content {
   float: left;
@@ -229,6 +232,11 @@ footer {
     border-radius: 1px; }
   .login_container .box {
     margin: 80px auto; }
+
+.home_logout {
+  float: left;
+  text-align: center;
+  width: 100%; }
 
 .home_logo {
   text-align: center;
