--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -68,6 +68,10 @@ header{
 			line-height: 50px;
 		}
 	}
+	.logout{
+		float: right;
+		margin: 15px 0 0 0;
+	}
 }
 
 .main_content{
@@ -346,6 +350,13 @@ footer{
 }
 
 // Home page
+
+.home_logout{
+	float: left;
+	text-align: center;
+	width: 100%;
+}
+
 .home_logo{
 	text-align: center;
 	margin: 0 0 50px 0;
