--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,9 @@
 	<header>
 		<div class="container">
 			<div class="logo"><%= link_to image_tag('logo.png'), '/' %> <span>/SiP</span></div>
+      <% if logged_in? %>
+        <%= link_to 'Sair', logout_path, :class => "logout" %>
+      <% end %>
 		</div>
 	</header>
 
