--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -14,32 +14,16 @@
     <thead>
         <th class="ip">IP</th>
         <th>Departamento</th>
-        <th>Subdepartamento</th>
         <th>Tipo</th>
         <th></th>
     </thead>
     <tbody>
       <tr class="fields">
         <td class="ip"><%= f.number_field :ip, :autofocus => true%></td>
-        <td class="dpto"><%= f.select :dpto_id, @dptos.to_a.collect {|d| [d.name, d.id] }, {include_blank: true}%></td>
-        <td class="subdpto"><%= select_tag :subdpto_id, {}, :disabled => true, :id=>"equipment_subdpto_id"%></td>
+        <td class="dpto"><%= f.select(:dpto_id, @dptos.map {|d| [ d['name'], d['id'] ] }, {include_blank: 'Departamento'}, required: true) %></td>
         <td class="sort"><%= f.text_field :sort %></td>
-        <td class="actions"><%= f.submit %></td>
+        <td class="actions"><%= f.submit "Salvar" %></td>
       </tr>
     </tbody>
   </table>
 <% end %>
-<script type="text/javascript">
-jQuery(function($) {
-// when the #region_id field changes
-  $("#equipment_dpto_id").change(function() {
-    // make a POST call and replace the content
-    var dpto = $('select#equipment_dpto_id :selected').val();
-    if(dpto == "") dpto="0";
-    jQuery.get('<%= root_path %>/equipment/get_subdptos/' + dpto, function(data){
-        $("#equipment_subdpto_id").replaceWith(data);
-    })
-    return false;
-  });
-})
-</script>
