--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -5,7 +5,6 @@
     <tr>
       <th class="ip">IP</th>
       <th>Departamento</th>
-      <th>Subdepartamento</th>
       <th>Tipo</th>
     </tr>
   </thead>
@@ -16,17 +15,12 @@
             <td class="ip"><%= equipment.ip %></td>
             <td class="dpto">
               <% @dptos.each do |d| %>
-                <%= d.abbr if equipment.dpto_id == d.id %>
+                <%= d["abbr"] if equipment.dpto_id == d["id"] %>
               <% end %>
-              </td>  
-              <td class="subdpto">
-              <% @subdptos.each do |s| %>
-                <%= s.abbr if equipment.subdpto_id == s.id %>
-              <% end %>
-            </td>
+              </td>
             <td class="sort"><%= equipment.sort %></td>
             <td class="actions"><%= link_to image_tag('edit.png'), edit_equipment_path(equipment), :remote => true, :title => "Editar" %>
-            <%= link_to image_tag('delete.png'), equipment, method: :delete, data: { confirm: 'Are you sure?' }, :remote => true, :title => "Deletar"%>
+            <%= link_to image_tag('delete.png'), equipment, method: :delete, data: { confirm: 'Tem certeza que vai remover?' }, :remote => true, :title => "Deletar"%>
           </tr>
       <% end %>
   </tbody>
