--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
 
 	<header>
 		<div class="container">
-			<div class="logo"><%= link_to image_tag('logo.png'), '/' %> <span>/SiP</span></div>
+			<div class="logo"><%= link_to image_tag('logo.png'), '/sip' %> <span>/SiP</span></div>
       <% if logged_in? %>
         <%= link_to 'Sair', logout_path, :class => "logout" %>
       <% end %>
